# rsa-pki-edu

./: .gitignore  README.md  guide.txt
.github/workflows/: backend-ci.yml  coverage.yml  frontend-ci.yml
backend/: CMakeLists.txt
backend/include/: AttackerHandler.h  BigInteger.h  BobHandler.h  CAHandler.h  Certificate.h  DocumentHandler.h  Education.h  HMAC.h  Hash.h  RSA.h  Session.h  SessionHandler.h  TLSHandler.h  TLSSession.h
backend/src/: AttackerHandler.cpp  BigInteger.cpp  BobHandler.cpp  CAHandler.cpp  Certificate.cpp  DocumentHandler.cpp  HMAC.cpp  Hash.cpp  RSA.cpp  Session.cpp  SessionHandler.cpp  TLSHandler.cpp  TLSSession.cpp  education.cpp  main.cpp
backend/tests/: test_attacker.cpp  test_biginteger.cpp  test_bob.cpp  test_certificate.cpp  test_document.cpp  test_education.cpp  test_hash.cpp  test_rsa.cpp  test_session.cpp  test_tls.cpp
frontend/: package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/api/: attacker.ts  certificate.ts  document.ts  education.ts  session.ts  tls.ts  verification.ts
frontend/src/pages/: AttackerScenario.css  AttackerScenario.tsx  BobVerify.css  BobVerify.tsx  CACertificate.css  CACertificate.tsx  KeyGeneration.css  KeyGeneration.tsx  RSATheory.css  RSATheory.tsx  SignDocument.css  SignDocument.tsx  TLSHandshake.css  TLSHandshake.tsx
frontend/src/types/: attacker.ts  certificate.ts  document.ts  education.ts  session.ts  tls.ts  verification.ts
